# personalize

./: .gitignore  PROGRESS.md  pyproject.toml
configs/: baseline.json
scripts/: compare_methods.py  compare_qwen.py  eval_lamp.py  run_baseline.py  run_e2p.py  train_cross_attention.py  train_e2p.py  train_lamp.py  train_persoma.py  train_retrieval.py
src/personalize/: __init__.py
src/personalize/datasets/: __init__.py  datasets.py  lamp.py  user_context.py
src/personalize/encoders/: __init__.py  gated_cross_attention.py  memory_bank.py  persoma.py  prefix_projector.py  user_encoder.py
src/personalize/models/: __init__.py  base.py  cross_attention_llm.py  e2p.py  persoma_llm.py  retrieval_augmented_llm.py  text_baseline.py
src/personalize/retrieval/: __init__.py  faiss_retriever.py
src/personalize/training/: __init__.py  trainer.py
